--- a/lang/main.json
+++ b/lang/main.json
@@ -1475,8 +1475,8 @@
         "getHelp": "Get help",
         "go": "GO",
         "goSmall": "GO",
-        "headerSubtitle": "Secure and high quality meetings",
-        "headerTitle": "Jitsi Meet",
+        "headerSubtitle": "Viện nghiên cứu ứng dụng công nghệ CMC",
+        "headerTitle": "CMeet",
         "info": "Dial-in info",
         "jitsiOnMobile": "Jitsi on mobile – download our apps and start a meeting from anywhere",
         "join": "CREATE / JOIN",
@@ -1504,7 +1504,7 @@
         "roomnameHint": "Enter the name or URL of the room you want to join. You may make a name up, just let the people you are meeting know it so that they enter the same name.",
         "sendFeedback": "Send feedback",
         "settings": "Settings",
-        "startMeeting": "Start meeting",
+        "startMeeting": "Bắt đầu họp",
         "terms": "Terms",
         "title": "Secure, fully featured, and completely free video conferencing",
         "upcomingMeetings": "Your upcoming meetings"
