fix logo, hello input

--- a/lang/main-vi.json
+++ b/lang/main-vi.json
@@ -274,7 +274,7 @@
         "stopRecordingWarning": "Bạn có chắc chắn muốn dừng ghi hình không?",
         "stopStreamingWarning": "Bạn có chắc chắn muốn dừng phát trực tuyến?",
         "streamKey": "Mã phát trực tuyến",
-        "thankYou": "Cám ơn bạn đã sử dụng CMeet!",
+        "thankYou": "Cám ơn bạn đã sử dụng C-Meet!",
         "token": "mã thông báo",
         "tokenAuthFailed": "Rất tiếc, bạn không được phép tham gia cuộc gọi này.",
         "tokenAuthFailedTitle": "Xác thực thất bại",
