--- a/lang/main.json
+++ b/lang/main.json
@@ -1476,7 +1476,7 @@
         "go": "GO",
         "goSmall": "GO",
         "headerSubtitle": "Viện nghiên cứu ứng dụng công nghệ CMC",
-        "headerTitle": "CMeet",
+        "headerTitle": "C-Meet",
         "info": "Dial-in info",
         "jitsiOnMobile": "Jitsi on mobile – download our apps and start a meeting from anywhere",
         "join": "CREATE / JOIN",
