fix title in prejoin

--- a/lang/main.json
+++ b/lang/main.json
@@ -649,7 +649,7 @@
         "invalidPassword": "Invalid password",
         "joinRejectedMessage": "Your join request was rejected by a moderator.",
         "joinRejectedTitle": "Join request rejected.",
-        "joinTitle": "Join Meeting",
+        "joinTitle": "Tham gia cuộc họp",
         "joinWithPasswordMessage": "Trying to join with password, please wait...",
         "joiningMessage": "You'll join the meeting as soon as someone accepts your request",
         "joiningTitle": "Asking to join meeting...",
@@ -903,13 +903,14 @@
         "errorDialOutFailed": "Could not dial out. Call failed",
         "errorDialOutStatus": "Error getting dial out status",
         "errorMissingName": "Please enter your name to join the meeting",
-        "errorNoPermissions": "You need to enable microphone and camera access",
+        "errorNoPermissions": "Bạn cần cập quyền microphone và camera",
         "errorStatusCode": "Error dialing out, status code: {{status}}",
         "errorValidation": "Number validation failed",
         "iWantToDialIn": "I want to dial in",
         "initiated": "Call initiated",
         "joinAudioByPhone": "Join with phone audio",
-        "joinMeeting": "Join meeting",
+        "joinMeeting": "Tham gia!",
+        "joinMeetingTitle": "C-Meet xin chào!",
         "joinMeetingInLowBandwidthMode": "Join in low bandwidth mode",
         "joinWithoutAudio": "Join without audio",
         "keyboardShortcuts": "Enable Keyboard shortcuts",
@@ -1058,7 +1059,7 @@
         "more": "General",
         "name": "Name",
         "noDevice": "None",
-        "notifications": "Notifications",
+        "notifications": "Thông báo",
         "participantJoined": "Participant Joined",
         "participantKnocking": "Participant entered lobby",
         "participantLeft": "Participant Left",
