--- a/lang/main.json
+++ b/lang/main.json
@@ -1500,7 +1500,7 @@
         "recentListEmpty": "Your recent list is currently empty. Chat with your team and you will find all your recent meetings here.",
         "recentMeetings": "Your recent meetings",
         "reducedUIText": "Welcome to {{app}}!",
-        "roomNameAllowedChars": "Meeting name should not contain any of these characters: ?, &, :, ', \", %, #.",
+        "roomNameAllowedChars": "Tên cuộc họp không chứa các ký tự : ?, &, :, ', \", %, #.",
         "roomname": "Enter room name",
         "roomnameHint": "Enter the name or URL of the room you want to join. You may make a name up, just let the people you are meeting know it so that they enter the same name.",
         "sendFeedback": "Send feedback",
