--- a/lang/main-eu.json
+++ b/lang/main-eu.json
@@ -1007,7 +1007,7 @@
         "getHelp": "Lortu laguntza",
         "go": "JOAN",
         "goSmall": "JOAN",
-        "headerSubtitle": "Secure and high quality meetings",
+        "headerSubtitle": "Chào mừng bạn đến với C-Meet",
         "headerTitle": "Jitsi Meet",
         "info": "Informazioa",
         "jitsiOnMobile": "Jitsi eramangarrian – deskargatu gure aplikazioak eta hasi bilerak edonondik",
