--- a/lang/main-te.json
+++ b/lang/main-te.json
@@ -975,7 +975,7 @@
         "getHelp": "సహాయం పొందండి",
         "go": "వెళ్ళు",
         "goSmall": "వెళ్ళు",
-        "headerSubtitle": "Secure and high quality meetings",
+        "headerSubtitle": "Chào mừng bạn đến với C-Meet",
         "headerTitle": "జిత్సి మీట్",
         "info": "డయలింగ్ సమాచారం",
         "jitsiOnMobile": "Jitsi on mobile – download our apps and start a meeting from anywhere",
